--- a/src/main/ui/app/package.json
+++ b/src/main/ui/app/package.json
@@ -12,5 +12,6 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
-  }
+  },
+  "homepage": "http://localhost:8080/apirest"
 }
