--- a/src/main/ui/app/package.json
+++ b/src/main/ui/app/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.0-beta2",
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-paginate": "^7.1.0"
   }
 }
